fixwrap, remove secondsPassed signal

--- a/src/lbpDashboard/projectTokenInfo/projectTokenInfo.scss
+++ b/src/lbpDashboard/projectTokenInfo/projectTokenInfo.scss
@@ -33,6 +33,7 @@
     grid-area: priceValue;
     font-size: 24px;
     font-family: Inter;
+    white-space: nowrap;
     // display: flex;
     // align-items: center;
 
